test push bb's stuff

--- a/user-collaborative-filtering.ipynb
+++ b/user-collaborative-filtering.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = pd.read_csv(\"ml-20m/ratings.csv\")"
+    "r = pd.read_csv(\"/Users/Armen/Desktop/SpringDataProject/ratings.csv\")"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112486027</td>\n",
+       "      <td>22243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22243</th>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484676</td>\n",
+       "      <td>8520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30763</th>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484819</td>\n",
+       "      <td>44980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75743</th>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484727</td>\n",
+       "      <td>43249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118992</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484580</td>\n",
+       "      <td>47006</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        userId  movieId  rating   timestamp  count\n",
+       "0            1        2     3.5  1112486027  22243\n",
+       "22243        1       29     3.5  1112484676   8520\n",
+       "30763        1       32     3.5  1112484819  44980\n",
+       "75743        1       47     3.5  1112484727  43249\n",
+       "118992       1       50     3.5  1112484580  47006"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = merged[merged[\"count\"]>17].sort_values(['userId', 'movieId'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,10 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dense = sparse_matrix.todense()"
@@ -82,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -108,25 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#user_movie_matrix1.fillna(0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def cosine_similarity(user1, user2):\n",
-    "    return user1.dot(user2)/(spla.norm(user1)*spla.norm(user2))"
    ]
   },
   {
@@ -135,7 +213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neigh = NearestNeighbors(n_neighbors=1000, algorithm='brute', metric='cosine')"
+    "def cosine_similarity(user1, user2):\n",
+    "    return user1.dot(user2)/(spla.norm(user1)*spla.norm(user2))"
    ]
   },
   {
@@ -144,23 +223,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = neigh.fit(sparse_matrix)"
+    "neigh = NearestNeighbors(n_neighbors=1000, algorithm='brute', metric='cosine')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "m = pd.read_csv(\"ml-20m/movies.csv\")"
+    "model = neigh.fit(sparse_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = pd.read_csv(\"/Users/Armen/Desktop/SpringDataProject/movies.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
