Apply movie_recommender to entire dataset

--- a/user-collaborative-filtering.ipynb
+++ b/user-collaborative-filtering.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -18,42 +20,44 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "r = pd.read_csv(\"/Users/Armen/Desktop/SpringDataProject/ratings.csv\")"
+    "#Benjamin's path: path = \"/Users/Armen/Desktop/SpringDataProject/\"\n",
+    "#Ben C's path:\n",
+    "path = \"/Users/benchristensen/Desktop/Recommneder_System_Project/ml-20m/\"\n",
+    "r = pd.read_csv(path + \"ratings.csv\", nrows = 10000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#r.groupby(\"movieId\").size().reset_index(name='count')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Create variable \"count\" for number of ratings for each movie\n",
     "merged = r.merge(r.groupby(\"movieId\").size().reset_index(name='count'), how='right', on='movieId')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#Drop any movies that have 17 or fewer ratings\n",
     "df = merged[merged[\"count\"]>17].sort_values(['userId', 'movieId'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,59 +90,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1112486027</td>\n",
-       "      <td>22243</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22243</th>\n",
-       "      <td>1</td>\n",
-       "      <td>29</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1112484676</td>\n",
-       "      <td>8520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30763</th>\n",
+       "      <th>12</th>\n",
        "      <td>1</td>\n",
        "      <td>32</td>\n",
        "      <td>3.5</td>\n",
        "      <td>1112484819</td>\n",
-       "      <td>44980</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75743</th>\n",
+       "      <th>36</th>\n",
        "      <td>1</td>\n",
        "      <td>47</td>\n",
        "      <td>3.5</td>\n",
        "      <td>1112484727</td>\n",
-       "      <td>43249</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118992</th>\n",
+       "      <th>64</th>\n",
        "      <td>1</td>\n",
        "      <td>50</td>\n",
        "      <td>3.5</td>\n",
        "      <td>1112484580</td>\n",
-       "      <td>47006</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>1</td>\n",
+       "      <td>253</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1112484940</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>1</td>\n",
+       "      <td>260</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1112484826</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        userId  movieId  rating   timestamp  count\n",
-       "0            1        2     3.5  1112486027  22243\n",
-       "22243        1       29     3.5  1112484676   8520\n",
-       "30763        1       32     3.5  1112484819  44980\n",
-       "75743        1       47     3.5  1112484727  43249\n",
-       "118992       1       50     3.5  1112484580  47006"
+       "     userId  movieId  rating   timestamp  count\n",
+       "12        1       32     3.5  1112484819     24\n",
+       "36        1       47     3.5  1112484727     28\n",
+       "64        1       50     3.5  1112484580     28\n",
+       "127       1      253     4.0  1112484940     20\n",
+       "147       1      260     4.0  1112484826     34"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,10 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#Generate user-movie matrix with ratings as its values\n",
     "user_c = CategoricalDtype(sorted(df.userId.unique()), ordered=True)\n",
     "movie_c = CategoricalDtype(sorted(df.movieId.unique()), ordered=True)\n",
     "\n",
@@ -165,20 +172,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#Change to dense for viewing its data\n",
     "dense = sparse_matrix.todense()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#user_movie_matrix1 = df.pivot(index='userId', columns='movieId', values='rating')\n",
+    "#Create sparse dataframe from user-movie matrix\n",
     "dfs = pd.SparseDataFrame(sparse_matrix, \\\n",
     "                         index=user_c.categories, \\\n",
     "                         columns=movie_c.categories, \\\n",
@@ -187,115 +199,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#for i in np.random.randint(0,500,5):\n",
-    "#    print(np.array_equal(df[df.userId == i].rating,dfs.iloc[i].iloc[dfs.iloc[i].nonzero()]))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#user_movie_matrix1.fillna(0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def cosine_similarity(user1, user2):\n",
-    "#    return user1.dot(user2)/(spla.norm(user1)*spla.norm(user2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Initialize nearest neighbors model\n",
     "neigh = NearestNeighbors(n_neighbors=1000, algorithm='brute', metric='cosine')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#Fit on the movie ratings we have\n",
     "model = neigh.fit(sparse_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "m = pd.read_csv(\"/Users/Armen/Desktop/SpringDataProject/movies.csv\")"
+    "m = pd.read_csv(path + \"movies.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend_movies(fitted_model, userId, n):\n",
+    "def recommend_movies(df, matrix, fitted_model, user_id, n):\n",
     "    alpha=1\n",
-    "    #mask is the movies not seen by userId\n",
-    "    mask = np.array(dense[userId-1]==0)[0]\n",
-    "    #apply the mask\n",
-    "    new = dense[:,mask]\n",
-    "    #get the 50 neearest neighbors of userId\n",
-    "    input_ = fitted_model.kneighbors(dense[userId-1], 50)\n",
-    "    #print(input_[1][0])\n",
-    "    neighbors = new[input_[1][0]]\n",
-    "    print(neighbors)\n",
-    "    position = np.argmax((np.array(np.mean(neighbors-2.5, axis=0))[0]*alpha*np.array(np.sum(neighbors!=0,axis=0))[0]))\n",
-    "    movie_id = np.array(sorted(list(set(df.movieId.values))))[mask][position]\n",
-    "    return m[m.movieId == movie_id].title"
+    "    movieids_seen = df[df.userId == user_id].movieId.values\n",
+    "    #mask is the indices of the movies that userid has seen in the user-movie matrix\n",
+    "    mask = []\n",
+    "    for i, j in enumerate(movie_c.categories):\n",
+    "        if j in df[df.userId == user_id].movieId.values:\n",
+    "            mask.append(i)\n",
+    "    #use the mask to get the indices of the movies userid hasn't seen\n",
+    "    not_seen = list(set(range(len(movie_c.categories))) - set(mask))\n",
+    "    #cut out the movies (columns) userid has seen from our matrix\n",
+    "    ######new = dense[:,not_seen]\n",
+    "    new = matrix[:,not_seen]\n",
+    "    #get the indices for nearest neighbors of userId\n",
+    "    indices = fitted_model.kneighbors(matrix[user_id-1], 3)[1][0]\n",
+    "    \n",
+    "    #neighbors is the actual rows of the matrix with each neighbors ratings\n",
+    "    neighbors = new[indices].todense()\n",
+    "    #find how many times each movie has been rated by the neighbors\n",
+    "    neigh_movies = []\n",
+    "\n",
+    "    #find how many times each movie has been rated by the neighbors\n",
+    "    ratings_count = []\n",
+    "    #Loop through the movie_ids not seen by our user\n",
+    "    for movie_id in np.array(movie_c.categories)[not_seen]:\n",
+    "        count = 0\n",
+    "        #Loop through the user_ids of our user's neighbor\n",
+    "        for id_ in indices + 1:\n",
+    "            #Check if the userId has rated the movie\n",
+    "            if movie_id in df[df.userId == id_].movieId.values:\n",
+    "                count += 1\n",
+    "        ratings_count.append(count)\n",
+    "    ratings_count = np.array(ratings_count)\n",
+    "    #Choose the movie to recommend (weight frequently-seen-movies higher)\n",
+    "    position = np.argmax(np.mean(neighbors - 2.5, axis=0)*alpha*ratings_count.reshape((-1,1)))\n",
+    "    #get the movieid from the matrix column value\n",
+    "    movie_id = np.array(movie_c.categories)[not_seen][position]\n",
+    "    print('movie_id',movie_id)\n",
+    "    return movie_id, m[m.movieId == movie_id].title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-f6365cd531c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecommend_movies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m42\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-18-0652b6be0b69>\u001b[0m in \u001b[0;36mrecommend_movies\u001b[0;34m(fitted_model, userId, n)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdense\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muserId\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#apply the mask\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mnew\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdense\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0minput_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfitted_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkneighbors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdense\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muserId\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda/lib/python3.6/site-packages/numpy/matrixlib/defmatrix.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda/lib/python3.6/site-packages/numpy/matrixlib/defmatrix.py\u001b[0m in \u001b[0;36m__array_finalize__\u001b[0;34m(self, obj)\u001b[0m\n\u001b[1;32m    162\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 164\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__array_finalize__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    165\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "movie_id 21\n",
+      "(21, 20    Get Shorty (1995)\n",
+      "Name: title, dtype: object)\n"
      ]
     }
    ],
    "source": [
-    "print(recommend_movies(model, 42, 1))"
+    "print(recommend_movies(df, sparse_matrix, model, 12, 1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = np.array([[1,1,.5],\n",
@@ -328,7 +338,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
