--- a/nearestneighbors on a small dataset.ipynb
+++ b/nearestneighbors on a small dataset.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +92,7 @@
        "4     2.0     30.0     2.0"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,8 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "user_c = CategoricalDtype(sorted(df.userId.unique()), ordered=True)\n",
@@ -150,8 +154,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "matrix = sparse_matrix\n",
+    "new = matrix[:,[1, 3,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[4. , 0.5, 0. ]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new[5].todense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -168,7 +206,7 @@
        "       [2.5, 4.5, 3.5, 2.5, 2. , 2.5, 2. , 2.5, 4. , 2.5]])"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +226,7 @@
        "pandas.core.indexes.numeric.Float64Index"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +324,7 @@
        "6     2.0     90.0     5.0"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,8 +336,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "neigh = NearestNeighbors(algorithm='brute', metric='cosine')\n",
@@ -309,8 +349,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def recommend_movies(fitted_model, user_id, n):\n",
@@ -331,16 +373,18 @@
     "    \n",
     "    #neighbors is the actual rows of the matrix with each neighbors ratings\n",
     "    neighbors = new[input_[1][0]]\n",
+    "    print(neighbors)\n",
     "    #find how many times each movie has been rated by the neighbors\n",
     "    neigh_movies = []\n",
     "    for id in input_[1][0] + 1:\n",
     "        x = df[df.userId == id].movieId.values\n",
     "        x = list(set(x) - set(movieids_seen))\n",
     "        neigh_movies += x\n",
+    "    print(neigh_movies)\n",
     "    ratings_count = np.array(np.unique(neigh_movies,return_counts = True)[1])\n",
     "    \n",
     "    #Ben's calculation\n",
-    "    position = np.argmax((np.array(np.mean(neighbors - 2.5, axis=0))*alpha*ratings_count[2]))\n",
+    "    position = np.argmax((np.array(np.mean(neighbors - 2.5, axis=0))*alpha*ratings_count))\n",
     "    #get the movieid from the matrix column value\n",
     "    movie_id = np.array(movie_c.categories)[not_seen][position]\n",
     "    print('movie_id',movie_id)\n",
@@ -349,26 +393,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 3 3]\n",
-      "[ 0.         -0.16666667  0.         -0.16666667  0.          2.\n",
-      "  0.        ]\n",
-      "5\n",
-      "movie_id 90.0\n"
+      "[[2.5 2.  2.5 2.  2.5 4.  2.5]\n",
+      " [2.5 2.5 2.5 4.  2.5 5.  2.5]\n",
+      " [2.5 2.5 2.5 1.  2.5 4.5 2.5]]\n",
+      "[50.0, 90.0, 70.0, 90.0, 70.0, 90.0, 70.0]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Armen/anaconda/lib/python3.6/site-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "/anaconda/lib/python3.6/site-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
       "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (7,) (3,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-81484021e74a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecommend_movies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-22-a964f8dc24e2>\u001b[0m in \u001b[0;36mrecommend_movies\u001b[0;34m(fitted_model, user_id, n)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m#Ben's calculation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0mposition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m2.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mratings_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0;31m#get the movieid from the matrix column value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mmovie_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie_c\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnot_seen\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (7,) (3,) "
      ]
     }
    ],
@@ -379,21 +434,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
